[tool.poetry]
name = "mkkluna"
version = "0.1.0"
description = ""
authors = ["Egor Nikitin <eanikitin90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.2"
backoff = "^2.2.1"
uvicorn = "^0.42.0"
pydantic-settings = "^2.13.1"
alembic = "^1.18.4"
sqlalchemy = "^2.0.48"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.11"
pyyaml = "^6.0.3"
faststream = {extras = ["rabbit"], version = "^0.6.7"}
aiohttp = "^3.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
